--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1"
   }
 }
